# wirthian

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/workflows/: deploy.yml
benches/: interpreter.rs  lexer.rs  parser.rs
benches/generate/: mod.rs
programs/: collatz.pa  doubles.pa  fib.pa  fizzbuzz.pa  mandelbrot.pa  primes.pa  strings.pa
src/: ast.rs  checker.rs  grammar.lalrpop  highlighter.rs  interp.rs  lexer.rs  lib.rs  main.rs  wasm.rs
tests/: test_grammar.rs  test_interp.rs  test_lexer.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lang/: wirthian.grammar  wirthian.ts
web/src/lib/: Editor.svelte  wasm.ts
