[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli"]
cli = ["miette/fancy", "miette/syntect-highlighter", "dep:owo-colors", "dep:syntect"]
wasm = [
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:serde",
    "dep:serde-wasm-bindgen",
]

[dependencies]
lalrpop-util = "0.23.1"
logos = "0.16.1"
miette = { version = "7.6.0", default-features = false, features = ["derive"] }
thiserror = "2.0.11"
bumpalo = "3.19.0"
owo-colors = { version = "4.2.3", optional = true }
syntect = { version = "5.1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[[bin]]
name = "interpreter"
required-features = ["cli"]

[build-dependencies]
lalrpop = "0.23.1"

[dev-dependencies]
divan = "0.1.21"
fastrand = "2.4.1"

[profile.bench]
debug = true

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "interpreter"
harness = false
